--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required (VERSION 3.2)
 # project name
 project (raqm)
 
+set (VERSION 0.2)
 include(CheckCCompilerFlag)
 check_c_compiler_flag("-std=c99" C99_SUPPORTED)
 if (C99_SUPPORTED)
@@ -251,39 +252,50 @@ endif()
 if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
   set(CMAKE_C_FLAGS "/W4 /WX /wd4068")
 endif()
+
+
 ###############################################
+# DOCUMENTATION
+ option(enable-gtk-doc "build the documentation" OFF)
+ if (enable-gtk-doc)
+     INCLUDE(FindPkgConfig)
+     find_package(GtkDoc 1.25 REQUIRED)
 
-# DOCUMENTATION not supported yet.
-# option(build_docs "build the documentation" OFF)
-# if (build_docs)
-# INCLUDE(FindPkgConfig)
-# # PKG_CHECK_MODULES(GLIB REQUIRED  glib-2.0)
-# find_package(GtkDoc 1.25 REQUIRED)
-#     if(GTKDOC_FOUND)
-#     message("gtkdoc found, API documentation will be built.")
-#     configure_file("version.xml.in" ${CMAKE_CURRENT_SOURCE_DIR}/version.xml)
-#   gtk_doc_add_module(raqm
-#                      SOURCE  ${CMAKE_SOURCE_DIR}/src
-# 		      SOURCE ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/src
-#                       XML ${CMAKE_SOURCE_DIR}/docs/raqm-docs.xml
-#                       LIBRARIES raqm
-#                       LIBRARY_DIRS ${FREETYPE_LIBRARIES} ${FRIBIDI_LIBRARY} ${HARFBUZZ_LIBRARIES} ${GLIB_LIBRARIES}
-#                       )
+     if(GTKDOC_FOUND)
+     	message(STATUS "gtkdoc found, API documentation will be built.")
+     	#configure_file(${CMAKE_SOURCE_DIR}/docs/version.xml.in version.xml @ONLY)
+     	configure_file(${CMAKE_SOURCE_DIR}/docs/raqm-docs.cmake.xml.in
+			raqm-docs.xml @ONLY)
+	gtk_doc_add_module(raqm
+	    XML
+		${CMAKE_CURRENT_BINARY_DIR}/raqm-docs.xml
+	    SOURCE
+		${CMAKE_CURRENT_SOURCE_DIR}
+		${CMAKE_SOURCE_DIR}/src
+	    SUFFIXES
+		"h"
+		"c"
+	    LIBRARIES
+		raqm
+	    LIBRARY_DIRS
+		${FREETYPE_LIBRARIES}
+		${FRIBIDI_LIBRARY}
+		${HARFBUZZ_LIBRARIES}
+		${GLIB_LIBRARIES}
+		)
 
-# Install the docs. (This assumes you're using the GNUInstallDirs CMake module
-# to set the CMAKE_INSTALL_DOCDIR variable correctly).
-#install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/docs/html
- #       DESTINATION ${CMAKE_INSTALL_DOCDIR})
-# 	    gtk_doc_add_module(
-# 		  raqm 
-# 		  SOURCE ${CMAKE_SOURCE_DIR}/src
-# 		  XML raqam-docs.xml
-# 		  LIBRARIES raqm
-# 	    )    
-#     else()
-#           message("gtkdoc was not found, API documentation can not be built.")
-#     endif()
-# endif()
+
+	add_custom_target (docs ALL DEPENDS doc-raqm)
+
+	include(GNUInstallDirs)
+	install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/raqm/html
+	DESTINATION ${CMAKE_INSTALL_DOCDIR})
+     else()
+           message(STATUS "gtkdoc was not found, API documentation can not be built.")
+     endif()
+else()
+	message (STATUS "build without documentation")
+endif()
   
 ###############################################
 
