--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
       sudo add-apt-repository ppa:as-bahanta/raqm -y;
       sudo apt-get update -qq;
-      sudo apt-get install -y libfreetype6-dev libharfbuzz-dev libfribidi-dev libglib2.0-dev gtk-doc-tools;
+      sudo apt-get install -y cmake libfreetype6-dev libharfbuzz-dev libfribidi-dev libglib2.0-dev gtk-doc-tools;
     fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
       brew update;
@@ -31,11 +31,10 @@ before_install:
   - if [ "${TRAVIS_OS_NAME}" == "osx" -a "${CC}" == "gcc" ]; then export CC=gcc-4.8; fi
 
 script:
-  - ./autogen.sh
-  - ./configure --enable-gtk-doc
+  - mkdir build & cd build
+  - cmake -DUNIT_TEST=1 -DWANT_DEBUG=1 ..
   - make
-  - make check
-  - make distcheck
+  - make test
 
 after_success:
   - if [ "$TRAVIS_OS_NAME" == "linux" -a "$CC" == "gcc" -a "$TRAVIS_SECURE_ENV_VARS" == "true" ];
