--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,10 @@ before_install:
   - if [ "${TRAVIS_OS_NAME}" == "osx" -a "${CC}" == "gcc" ]; then export CC=gcc-4.8; fi
 
 script:
-  - cmake -DUNIT_TEST=1 -DWANT_DEBUG=1
+  - cmake -DUNIT_TEST=1 -DWANT_DEBUG=1 -DENABLE_GTK_DOC=1
   - make
-  - ctest -V
+  - make test
+  - make docs
 
 after_success:
   - if [ "$TRAVIS_OS_NAME" == "linux" -a "$CC" == "gcc" -a "$TRAVIS_SECURE_ENV_VARS" == "true" ];
